  {PREFIX}/bin/php. If you enable the CGI binary to be built, it will be
  installed as {PREFIX}/bin/php-cgi.
- Fixed bug #17825 (ob_start() chunk size option didn't work well). (Yasuo)
- Fixed output buffering implicit flush. (Yasuo) 
- Added getopt() for parsing command line options and arguments. (Jon)
- Added pg_fetch_assoc(), pg_fetch_all(), pg_ping(), pg_meta_data(), pg_convert(), 
  pg_insert(), pg_select(), pg_update(), pg_delete() and pg_data_seek(). (Yasuo)
- Fixed bug #17281 (Sanity checks for encoding sessions). (Ilia)
- Fixed bug #16995 and #19392 (Prevent crash if $HTTP_SESSION_VARS != ARRAY).
  (Ilia)
- Fixed bug #19292 (open_basedir restriction problem). (Rasmus)
- Fixed bug #19366 (gdImageFill crashes when x & y are outside of 
  the image's boundries). (Ilia)
- Fixed bug #13936 (__FILE__ constant didn't contain full path). (Ilia)
- Renamed:
    socket_set_timeout()  -> stream_set_timeout()
    socket_set_blocking() -> stream_set_blocking()
    set_file_buffer()     -> stream_set_write_buffer()
    socket_get_status()   -> stream_get_meta_data()
  As these functions can (in theory) work on any type of stream. (Wez)
- Added stream_context_create(), stream_context_set_params() and
  stream_context_set_option and added an optional fourth parameter to
  fopen() which accepts a stream context.  Contexts allow sharing of
  information between streams (a kind of "session") and setting notification
  callbacks. (Wez)
- Added stream_filter_prepend() and stream_filter_append() which apply
  a filter to either the top or the bottom of the filter stack for a stream.
  Implemented "string.rot13" filter as an example; more filters are expected
  to follow in later releases and other extensions. (Wez)
- Added stream_select() which works like socket_select but works on streams
  returned by fopen(), fsockopen() and pfsockopen() instead. (Wez)
- Fixed bug #19595 (Missing functions for GD2 format handling). (Edin)